--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,8 +6,10 @@
 
 .board {
     margin-top: 20px;
+    width: 100%;
+    height: 800px;
     background-color: rgb(5, 137, 22);
-    //border: 3px double blue;
+    border: 3px double blue;
     box-sizing: border-box;
     position: relative;
 }
