--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,11 @@
 .wrap {
-  min-width: 900px;
-  min-height: 800px;
+  min-width: 600px;
 }
 
 .board {
-  margin-top: 20px;
   width: 100%;
-  height: 800px;
+  height: 100vh;
   background-color: rgb(5, 137, 22);
-  border: 3px double blue;
-  box-sizing: border-box;
   position: relative;
 }
 
