--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,16 +1,16 @@
 .wrap {
-    min-width: 900px;
-    min-height: 800px;
+    min-width: 600px;
+    // min-height: 800px;
     //margin: 20px auto;
 }
 
 .board {
-    margin-top: 20px;
+    //margin-top: 20px;
     width: 100%;
-    height: 800px;
+    height: 100vh;
     background-color: rgb(5, 137, 22);
-    border: 3px double blue;
-    box-sizing: border-box;
+    //border: 3px double blue;
+    //box-sizing: border-box;
     position: relative;
 }
 
