add check house

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,4 +47,11 @@
 .hello {
   height: 140px;
   padding: 15px;
+}
+
+.atHome {
+  display: flex;
+  font-size: 36px;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
