--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,3 +55,10 @@
     padding: 15px;
 }
 
+.atHome {
+    display: flex;
+    font-size: 36px;
+    justify-content: center;
+    align-items: center;
+}
+
