add game plus text

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,9 @@
   height: 100vh;
   background-color: rgb(5, 137, 22);
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .htmlRow {
@@ -50,8 +53,8 @@
 }
 
 .atHome {
-  display: flex;
+  background-color: orange;
+  border: 5px double blue;
+  padding: 20px;
   font-size: 36px;
-  justify-content: center;
-  align-items: center;
 }/*# sourceMappingURL=main.css.map */
