--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,3 +65,12 @@
     font-size: 36px;
 }
 
+.atCat {
+    background-color: rgb(106, 6, 6);
+    border: 5px double orange;
+    padding: 20px;
+    font-size: 36px;
+    text-align: center;
+    color: orange;
+}
+
